# granary

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  config.ini.example  devices.json.example  get_sensordata.py  main.py  pyproject.toml  show_data.py
data/: empty.db.example
granary/common/: convert.py  logging.py
granary/storage/: local_storage.py
